Fixed scroll on mobile devices (workaround)

--- a/assets/main.css
+++ b/assets/main.css
@@ -390,59 +390,6 @@ body.is-instant:after {
 	white-space: nowrap;
 }
 
-.buttons.style3 {
-	gap: 0.25rem;
-	flex-direction: row;
-	flex-wrap: wrap;
-}
-
-.buttons.style3 li a {
-	display: inline-flex;
-	width: auto;
-	height: 3rem;
-	line-height: 3rem;
-	padding: 0 1.5rem;
-	vertical-align: middle;
-	font-family: 'Noto Sans', sans-serif;
-	font-size: 0.625em;
-	font-weight: 700;
-	border-radius: 2.5rem;
-	transition: color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
-}
-
-.buttons.style3 li a svg {
-	display: block;
-	fill: #000000;
-	flex-grow: 0;
-	flex-shrink: 0;
-	height: 100%;
-	min-width: 16px;
-	width: 1em;
-	margin-left: -0.125em;
-	margin-right: calc(0.5em + 0rem);
-	transition: fill 0.25s ease;
-}
-
-.buttons.style3 li a .label {
-	direction: var(--site-language-direction);
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
-
-.buttons.style3 .button {
-	color: #000000;
-	border: solid 1px #000000;
-}
-
-.buttons.style3 .button:hover {
-	border-color: rgba(0,0,0,0.502) !important;
-	color: rgba(0,0,0,0.502) !important;
-}
-
-.buttons.style3 .button:hover svg {
-	fill: rgba(0,0,0,0.502) !important;
-}
-
 .buttons.style2 {
 	justify-content: flex-end;
 	gap: 0.25rem;
@@ -498,6 +445,67 @@ body.is-instant:after {
 
 .buttons.style2 .button:hover {
 	background-color: rgba(0,0,0,0.188) !important;
+}
+
+.buttons.style3 {
+	gap: 0.25rem;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.buttons.style3:not(:first-child) {
+	margin-top: 1rem !important;
+}
+
+.buttons.style3:not(:last-child) {
+	margin-bottom: 1rem !important;
+}
+
+.buttons.style3 li a {
+	display: inline-flex;
+	width: auto;
+	height: 3rem;
+	line-height: 3rem;
+	padding: 0 1.5rem;
+	vertical-align: middle;
+	font-family: 'Noto Sans', sans-serif;
+	font-size: 0.75em;
+	font-weight: 700;
+	border-radius: 2.5rem;
+	transition: color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+}
+
+.buttons.style3 li a svg {
+	display: block;
+	fill: #000000;
+	flex-grow: 0;
+	flex-shrink: 0;
+	height: 100%;
+	min-width: 16px;
+	width: 1em;
+	margin-left: -0.125em;
+	margin-right: calc(0.5em + 0rem);
+	transition: fill 0.25s ease;
+}
+
+.buttons.style3 li a .label {
+	direction: var(--site-language-direction);
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.buttons.style3 .button {
+	color: #000000;
+	border: solid 1px #000000;
+}
+
+.buttons.style3 .button:hover {
+	border-color: rgba(0,0,0,0.502) !important;
+	color: rgba(0,0,0,0.502) !important;
+}
+
+.buttons.style3 .button:hover svg {
+	fill: rgba(0,0,0,0.502) !important;
 }
 
 .buttons.style4 {
@@ -1814,19 +1822,6 @@ hr.style1:before {
 		width: 15rem;
 	}
 	
-	.buttons.style3 {
-		gap: 0.25rem;
-	}
-	
-	.buttons.style3 li a {
-		letter-spacing: 0rem;
-		font-size: 0.875em;
-	}
-	
-	.buttons.style3 li a svg {
-		width: 1em;
-	}
-	
 	.buttons.style2 {
 		gap: 0.25rem;
 	}
@@ -1846,6 +1841,27 @@ hr.style1:before {
 	
 	.buttons.style2 li a svg {
 		width: 1.75em;
+	}
+	
+	.buttons.style3 {
+		gap: 0.25rem;
+	}
+	
+	.buttons.style3:not(:first-child) {
+		margin-top: 0.75rem !important;
+	}
+	
+	.buttons.style3:not(:last-child) {
+		margin-bottom: 0.75rem !important;
+	}
+	
+	.buttons.style3 li a {
+		letter-spacing: 0rem;
+		font-size: 0.75em;
+	}
+	
+	.buttons.style3 li a svg {
+		width: 1em;
 	}
 	
 	.buttons.style4 {
@@ -2089,11 +2105,11 @@ hr.style1:before {
 		margin-top: -1.125rem !important;
 	}
 	
-	.buttons.style3 {
+	.buttons.style2 {
 		gap: 0.1875rem;
 	}
 	
-	.buttons.style2 {
+	.buttons.style3 {
 		gap: 0.1875rem;
 	}
 	
